testdata/golden/sema/invalid/recursive_option.fmt
// scenario: recursive by-value type should be rejected
type Node = { next: Node? };
